cmake_minimum_required(VERSION 3.7)
project(PubSubCPP)

set(CMAKE_CXX_STANDARD 14)


find_library(LIBRT rt)
find_library(LIBPTHREAD pthread)
add_library (clap_pubsub SHARED lib/topic.cpp lib/topic.hpp lib/debug.hpp)
#add_executable(clap_pubsub_cpp src/topic.cpp lib/topic.hpp lib/debug.hpp)
#add_executable(pubsub2 pubsub2.cpp topic.hpp debug.hpp)
#add_executable(rmtopic src/rmtopic.cpp lib/topic.hpp lib/debug.hpp)
#add_executable(measure measure.cpp topic.hpp debug.hpp)
#add_executable(rmservice rmservice.cpp topic.hpp debug.hpp)
#add_executable(service_serv service_serv.cpp topic.hpp debug.hpp)
#add_executable(service_cli service_cli.cpp topic.hpp debug.hpp)
#add_executable(test_speed test_speed.cpp topic.hpp debug.hpp)
#add_executable(box_serv box_serv.cpp topic.hpp debug.hpp)
#add_executable(box_cli box_cli.cpp topic.hpp debug.hpp)
#add_executable(office_serv office_serv.cpp topic.hpp debug.hpp)
#add_executable(office_cli office_cli.cpp topic.hpp debug.hpp)
target_link_libraries(clap_pubsub ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(pubsub ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(pubsub2 ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(rmtopic ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(measure ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(rmservice ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(service_serv ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(service_cli ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(test_speed ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(box_serv ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(box_cli ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(office_serv ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(office_cli ${LIBRT} ${LIBPTHREAD})

