cmake_minimum_required(VERSION 3.7)
project(PubSubCPP)

set(CMAKE_CXX_STANDARD 14)

find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
find_library(LIBRT rt)
find_library(LIBPTHREAD pthread)
add_library (clap_pubsub SHARED lib/topic.cpp lib/topic.hpp lib/debug.hpp)
add_executable(topic_sub src/topic_sub.cpp lib/topic.hpp lib/debug.hpp)
add_executable(topic_pub src/topic_pub.cpp lib/topic.hpp lib/debug.hpp)
add_executable(topic_rm src/topic_rm.cpp lib/topic.hpp lib/debug.hpp)
#add_executable(measure measure.cpp topic.hpp debug.hpp)
#add_executable(test_speed test_speed.cpp topic.hpp debug.hpp)
add_executable(box_serv src/box_serv.cpp lib/topic.hpp lib/debug.hpp)
add_executable(box_cli src/box_cli.cpp lib/topic.hpp lib/debug.hpp)
add_executable(box_rm src/box_rm.cpp lib/topic.hpp lib/debug.hpp)

add_executable(var_read src/var_read.cpp lib/topic.hpp lib/debug.hpp)
add_executable(var_write src/var_write.cpp lib/topic.hpp lib/debug.hpp)
add_executable(var_rm src/var_rm lib/topic.hpp lib/debug.hpp)
#add_executable(office_serv office_serv.cpp topic.hpp debug.hpp)
#add_executable(office_cli office_cli.cpp topic.hpp debug.hpp)
target_link_libraries(clap_pubsub ${LIBRT} ${LIBPTHREAD} ${PYTHON_LIBRARIES})
target_link_libraries(topic_sub ${LIBRT} ${LIBPTHREAD})
target_link_libraries(topic_pub ${LIBRT} ${LIBPTHREAD})
target_link_libraries(topic_rm ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(measure ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(test_speed ${LIBRT} ${LIBPTHREAD})
target_link_libraries(box_serv ${LIBRT} ${LIBPTHREAD})
target_link_libraries(box_cli ${LIBRT} ${LIBPTHREAD})
target_link_libraries(box_rm ${LIBRT} ${LIBPTHREAD})

target_link_libraries(var_read ${LIBRT} ${LIBPTHREAD})
target_link_libraries(var_write ${LIBRT} ${LIBPTHREAD})
target_link_libraries(var_rm ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(office_serv ${LIBRT} ${LIBPTHREAD})
#target_link_libraries(office_cli ${LIBRT} ${LIBPTHREAD})

